# XLDate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Main01.cpp  README.md
DateTests/: ExcelDayCount.xlsx  Fcns_Dates.cpp  Fcns_Dates.h  Fcns_Daycounts.cpp  Fcns_Daycounts.h  TestForThirty360E.R  Tests_Dates.cpp  Tests_Daycounts.cpp  catch.hpp
Dates/: DayCount.cpp  DayCount.h  TimeStep.cpp  TimeStep.h  XLDate.cpp  XLDate.h  date.h
